--- a/css/style.css
+++ b/css/style.css
@@ -177,9 +177,11 @@ h1 {
         align-items: center;
 }
 
+/* Modal */
+
 .modal {
-        background: var(--NAVY-BLUE-modal, 
-        rgba(46, 47, 66, 0.40));
+        /* background: var(--NAVY-BLUE-modal, 
+        rgba(46, 47, 66, 0.40)); */
         position: fixed;
         top: 0;
         left: 0;
@@ -191,22 +193,23 @@ h1 {
 }
 
 .data-modal {
-        width: 350px;
-        height: 500px;  
-        display: flex;
+        width: 408px;
+        height: 584px;  
+        display: block;
         align-items: center;
         justify-content: center;
         position: relative;
         border-radius: 4px;
-                background: var(--DAIRY, #FCFCFC);
-                box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 
-                0px 1px 3px 0px rgba(0, 0, 0, 0.12), 
-                0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+        background: var(--DAIRY, #FCFCFC);
+        box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 
+        0px 1px 3px 0px rgba(0, 0, 0, 0.12), 
+        0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+        /* transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .data-modal-close {
         position: absolute;
-        display: block;
+        /* display: block; */
         top: 20px;
         right: 20px;
         display: flex;
@@ -231,6 +234,139 @@ h1 {
         pointer-events: none;
 }
 
+.modal-heading { 
+        color: var(--NAVY-BLUE, #2E2F42);
+        text-align: center;
+        font-family: Roboto;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0.32px;
+        margin-top: 50px;
+        margin-bottom: 20px;
+}
+.service-name { 
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 8px;
+        margin-left: 24px;
+        margin-right: 24px;
+        width: 90%;
+        position: relative;
+}
+
+.input-name {
+        color: var(--LIGHT-SLATE, #8E8F99);
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        /* line-height: 14px; */
+        letter-spacing: 0.48px;
+        padding-bottom: 4px;
+}
+
+.service-box {
+        width: 100%;
+        padding: 12px 40px;
+        border-radius: 4px;
+        border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.service-icon { 
+        position: absolute;
+        top: 50%;
+        left: 15px;
+        fill: black;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.service-box:hover,
+.service-box:focus {
+        border: 1px solid var(--IRIS, #4D5AE5);
+}
+
+.service-box:focus + .service-icon { 
+        fill: var(--IRIS, #4D5AE5);
+}
+
+.service-text-area { 
+        border: 1px solid var(--NAVY-BLUE, #2E2F42);
+        border-radius: 4px;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        padding: 8px 16px;
+        color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+        font-size: 12px;
+}
+
+.service-text-area:hover { 
+        border: 1px solid var(--IRIS, #4D5AE5);
+}
+
+.service-agree { 
+        display: flex;
+        align-items: center;
+        justify-content: center;
+}
+
+.agree-box {
+        /* appearance: none; */
+        position: relative;
+        height: 20px;
+        width: 20px;
+        left: 20px;
+        opacity: 0;
+}
+
+.check-icon { 
+        fill: none;
+        border: 2px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+        border-radius: 2px;
+        transition: 250ms;
+        transition-property: border-color, background-color, fill;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.service-agree .agree-box:focus + .check-icon,
+.service-agree .agree-box:checked:focus + .check-icon { 
+        outline: 2px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+}
+
+.service-agree .agree-box:checked + .check-icon {
+        background-color: var(--IRIS, #4D5AE5);
+        border-color: var(--IRIS, #4D5AE5);
+        fill: white;
+        outline: none;
+        stroke: white;
+        stroke-width: 0.2;
+}
+.privacy-text {
+        color: var(--LIGHT-SLATE, #8E8F99);
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        margin-left: 8px;
+}
+
+
+.send-button { 
+        padding: 16px 60px;
+        background-color: var(--IRIS, #4D5AE5);
+        color: var(--WHITE, #FFF);
+        border-radius: 4px;
+        border: none;
+        margin-left: 36%;
+        margin-top: 24px;
+        margin-bottom: 24px;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0.64px;
+        text-align: center;
+
+}
 
 /* PORTFOLIO-BUTTON */
 
@@ -569,7 +705,8 @@ div.section-team ul.team li p {
         font-family: 'Raleway', sans-serif;
 
 }
-.footer p {
+
+.socials-p {
         color: var(--CLOUD, #F4F4FD);
         font-family: 'Roboto', sans-serif;
         margin-left: 156px;
@@ -582,6 +719,18 @@ div.section-team ul.team li p {
 
 .social-media {
         padding-left: 129px;
+        color: var(--CLOUD, #F4F4FD);
+        font-family: 'Roboto', sans-serif;
+        margin-left: 156px;
+        display: inline;
+}
+
+.subscribe-footer-p {
+        padding-left: 129px;
+        color: var(--CLOUD, #F4F4FD);
+        font-family: 'Roboto', sans-serif;
+        margin-left: 36px;
+        display: inline;
 }
 
 .footer-icons {
@@ -599,4 +748,45 @@ div.section-team ul.team li p {
         border-radius: 50%;
         margin-right: 0px;
         margin-left: 10px;
+}
+
+.subscribe { 
+        display: flex;
+}
+
+.subscribe-form { 
+        margin-left: 66px;
+        margin-top: 8px;
+}
+
+.subscribe-text {
+        width: 264px;
+        height: 38px;
+        border-radius: 4px;
+        border: 1px solid var(--WHITE, #FFF);
+        border-bottom: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+        font-size: 12px;
+}
+
+.subscribe-button {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 4px;
+        height: 39px;
+        background: var(--IRIS, #4D5AE5);
+        padding: 0px 24px;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        letter-spacing: 0.64px;
+        gap: 16px;
+        color: var(--WHITE, #FFF);
+        border: none;
+        margin-left: 24px;
+}
+
+.subscribe-button-p {
+        display: block;
+        padding-top: 2px;
 }
