--- a/css/style.css
+++ b/css/style.css
@@ -270,8 +270,10 @@ h1 {
         width: 100%;
         padding: 12px 40px;
         border-radius: 4px;
-        border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));;
-        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        border: 1px solid var(--NAVY-BLUE, #2E2F42);
+        transition: 250ms;
+        transition-property: color, border-color, background-color;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .service-icon { 
@@ -284,10 +286,11 @@ h1 {
 
 .service-box:hover,
 .service-box:focus {
-        border: 1px solid var(--IRIS, #4D5AE5);
+        border: 1px solid var(--IRIS, #4D5AE5);  
 }
 
-.service-box:focus + .service-icon { 
+.service-box:focus + .service-icon,
+.service-box:hover + .service-icon { 
         fill: var(--IRIS, #4D5AE5);
 }
 
@@ -366,6 +369,10 @@ h1 {
         letter-spacing: 0.64px;
         text-align: center;
 
+}
+
+.send-button { 
+        cursor: pointer;
 }
 
 /* PORTFOLIO-BUTTON */
